<resources>
    <string name="app_name">TwinTracker</string>
    <string name="twin1_name">Agathe</string>
    <string name="twin2_name">Zoé</string>
    <string name="start">Démarrer</string>
    <string name="stop">Enregistrer</string>
    <string name="last">Dernière têtée :</string>
    <string name="prelast">Précédente :</string>
    <string name="pause">Arrêter</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">TwinTracker</string>
    <string name="menu_refresh">Rafraichir</string>
    <string-array name="twins">
        <item name="twin1">agathe</item>
        <item name="twin2">zoé</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>>

    <string name="history_shortcut_short_label">Historique</string>
    <string name="history_shortcut_long_label">Historique des têtées</string>
    <string name="history_disabled_message">Historique indisponible</string>

    <string name="settings_shortcut_short_label">Réglages</string>
    <string name="settings_shortcut_long_label">Modifier les réglages</string>
    <string name="settings_disabled_message">Réglages indisponibles</string>

    <string name="action_sync">Synchroniser</string>
    <string name="action_edit">Ajouter</string>
    <string name="datehint">00:00:00</string>
    <string name="vitamin">Vitamines</string>
    <string name="iron">Fer</string>
    <string name="local_service_started">service démarré</string>
    <string name="local_service_stopped">Service arrêté</string>
    <string name="local_service_label">Mon Service</string>
    <string name="notifications">Accepter les notifications :</string>
    <string name="twin1inputlabel">Nom du jumeau 1 :</string>
    <string name="twin2inputlabel">Nom du jumeau 2 :</string>
    <string name="autostop">Arrêt Automatique :</string>
    <string name="bath">Bain</string>
    <string name="changephoto">Modifier la photo</string>
    <string name="inexium">inexium</string>
</resources>
