<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charles.twintracker.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/child_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <TextView
        android:id="@+id/autostoplabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/autostop"
        android:textStyle="bold"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/child_toolbar" />

    <Switch
        android:id="@+id/autostopswitch"
        android:showText="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/notiflabel"
        app:layout_constraintTop_toBottomOf="@id/child_toolbar" />

    <TextView
        android:id="@+id/notiflabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/notifications"
        android:textStyle="bold"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autostoplabel" />

    <Switch
        android:id="@+id/notifswitch"
        android:showText="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/notiflabel"
        app:layout_constraintTop_toBottomOf="@id/autostoplabel" />

    <TextView
        android:id="@+id/twin1inputlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textStyle="bold"
        android:text="@string/twin1inputlabel"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/notiflabel"
        app:layout_constraintLeft_toRightOf="parent"/>

    <EditText
        android:id="@+id/twin1inputtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/twin1inputlabel"
        android:layout_marginLeft="20dp"
        android:textSize="10pt"
        android:hint="@string/twin1_name"
        app:layout_constraintTop_toBottomOf="@id/notiflabel"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/twin2inputlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textStyle="bold"
        android:text="@string/twin2inputlabel"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/twin1inputlabel"
        app:layout_constraintLeft_toRightOf="parent"/>

    <EditText
        android:id="@+id/twin2inputtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/twin2inputlabel"
        android:layout_marginLeft="20dp"
        android:textSize="10pt"
        android:hint="@string/twin2_name"
        app:layout_constraintTop_toBottomOf="@id/twin1inputlabel"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/savesettingsbttn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/twin2inputlabel"
        app:layout_constraintLeft_toRightOf="parent"
        android:text="@string/stop"
        android:background="?attr/colorAccent"
        />

</android.support.constraint.ConstraintLayout>
