<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charles.twintracker.MainActivity">

    <TextView
        android:id="@+id/twin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twin1_name"
        android:textSize="15pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/last1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/twin1"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/last1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintTop_toTopOf="@id/last1"
        app:layout_constraintLeft_toRightOf="@id/last1"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/prelast1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/prelast"
        app:layout_constraintTop_toBottomOf="@id/last1"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/prelast1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintTop_toTopOf="@id/prelast1"
        app:layout_constraintLeft_toRightOf="@id/prelast1"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/start_button_1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/start"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/prelast1"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:id="@+id/stop_button_1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/stop"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/start_button_1"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/current_timer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="@id/start_button_1"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/start_button_1"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/current_duration_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="@id/current_timer_1"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/current_timer_1"
        />

    <TextView
        android:id="@+id/twin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twin2_name"
        android:textStyle="bold"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/last2"
        android:text="@string/last"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/twin2"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/last2_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="@id/last2"
        app:layout_constraintTop_toTopOf="@id/last2"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/prelast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/prelast"
        app:layout_constraintTop_toBottomOf="@id/last2"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/prelast2_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintTop_toTopOf="@id/prelast2"
        app:layout_constraintLeft_toRightOf="@id/prelast2"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/start_button_2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/start"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/prelast2"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/stop_button_2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/stop"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/start_button_2"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/current_timer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="@id/start_button_2"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/start_button_2"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/current_duration_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        app:layout_constraintLeft_toRightOf="@id/current_timer_2"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/current_timer_2"
        />


</android.support.constraint.ConstraintLayout>
