<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charles.twintracker.DisplayHistoryActivity">

    <TextView
        android:id="@+id/twin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twin1_name"
        android:textSize="15pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/historylast11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/twin1"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast11"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast12"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast13"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast14"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast15"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/twin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twin2_name"
        android:textStyle="bold"
        android:textSize="15pt"
        app:layout_constraintTop_toBottomOf="@id/historylast16"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/historylast21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/twin2"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast21"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast22"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast23"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast24"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/historylast26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/historylast25"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp" />

</android.support.constraint.ConstraintLayout>
